--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
-    "next": "15.1.2",
+    "next": "^15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -21,14 +21,14 @@
     "@eslint/eslintrc": "^3",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "^20.17.14",
+    "@types/react": "^19.0.7",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
     "postcss": "^8",
     "prisma": "^6.2.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.7.3"
   }
 }
